--- a/To-Do-Listing/style.css
+++ b/To-Do-Listing/style.css
@@ -1,76 +1,107 @@
 body{
     margin: 0;
-    background-color: #222;
-    display: flex;
-    justify-content: center;
+    background-color: #fff;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
 }
-
-#newtask{
+.outer{
+    font-size: 15px;
+    font-family: "Segoe","Segoe UI","Arial","sans-serif";
+    font-weight: 500;
+    color: rgb(138, 138, 138);
+    margin: 0 40px;
+}
+.container{
     display: flex;
-    justify-content: center;
-    width: 217px;
-    margin: 100px 0 50px 0;
-    padding: 50px 100px;
+    flex-direction: row;
+    width: 1700px;
+    flex-direction: column;
+    margin-top: 120px;
     background-color: #fff;
     border-radius: 10px;
-    box-shadow: 5px 5px rgba(135, 207, 235, 0.178);
+    grid-column: 3/4;
+}
+#newtask{
+    display: flex;
+    padding: 20px 0px;
+    margin: 0px;
+    justify-content: left;
 }
 input{
     padding: 0 15px;
+    margin-left: 30px;
     background-color: #fff;
     font-size: medium;
-    font-weight: bolder;
-    font-family: 'Courier New', Courier, monospace;
+    width: 1200px;
+    font-weight: 500;
+    font-family: "Segoe","Segoe UI","Arial","sans-serif";
     border: 1px solid rgba(126, 126, 126, 0.4);
-    border-radius: 10px;
+    border-radius: 10px 0 0 10px;
     box-shadow: 3px 5px rgba(48, 48, 48, 0.178);
 }
 #push{
-    margin-left: 10px;
     padding: 15px 23px;
-    border: 2px solid rgba(126, 126, 126, 0.4);
-    border-radius: 10px;
-    background-color: orangered;
+    border: 1px solid rgba(126, 126, 126, 0.4);
+    border-radius: 0 10px 10px 0;
+    background-color: #333;
     color: white;
     cursor: pointer;
     font-size: medium;
     font-weight: bolder;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Segoe","Segoe UI","Arial","sans-serif";
     box-shadow: 3px 5px rgba(48, 48, 48, 0.178);
 }
 #tasks{
     border-radius: 10px;
     background-color: #fff;
     padding: 50px;
-    box-shadow: 5px 5px rgba(135, 207, 235, 0.178);
+    
 }
 .task{
+    display: flex;
     margin: 8px;
     padding: 8px;
     border-radius: 5px;
-    background-color: orangered;
-    color: #fff;
+    background-color: #fff;
     font-weight: bolder;
-    box-shadow: 5px 5px rgba(135, 207, 235, 0.178);
+    font-family: "Segoe","Segoe UI","Arial","sans-serif";
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.178);
 }
 .del{
-    margin-left: 205px;
+    margin-left: 5px;
     background-color: #fff;
     color: red;
     font-weight: bolder;
     border: none;
+    cursor: pointer;
+    box-shadow: 3px 3px rgba(48, 48, 48, 0.178);    
 }
 h2{
-    margin: -30px 0 20px -10px;
+    margin: 20px 0 0 30px;
     font-family: monospace;
     font-size: 30px;
-    color: orangered;
+    color: #333;
     font-weight: bolder;
 }
 .edit{
-    margin-left: 5px;
+    /* margin-left: 238px; */
     background-color: #fff;
-    color: aqua;
+    color: #222;
     font-weight: bolder;
     border: none;
+    cursor: pointer;
+    box-shadow: 3px 3px rgba(48, 48, 48, 0.178);
+}
+.task span{
+    flex-basis: auto;
+    margin-right: auto;
+}
+.time{
+    display: flex;
+    justify-content: right;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: "Segoe","Segoe UI","Arial","sans-serif";
+    margin-left: 180px;
+    margin-top: 5px;
 }
